--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,8 @@ steps:
 - script: composer install --no-interaction --prefer-dist
   displayName: 'composer install'
 
-- task: ArchiveFiles@2
+- task: CopyPublishBuildArtifacts@1
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+    Contents: '*'
+    ArtifactName: 'artifact1'
+    ArtifactType: 'Container'
